--- a/src/views/html/user/charts.ejs
+++ b/src/views/html/user/charts.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Portal - Bootstrap 5 Admin Dashboard Template For Developers</title>
+    <title>Gráfico</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -29,7 +29,7 @@
 			
 		    <div class="container-xl">
 			    
-			    <h1 class="app-page-title">Charts</h1>
+			    <h1 class="app-page-title">Gráfico</h1>
 				
 			    <div class="app-card shadow-sm mb-4 border-left-decoration" ></div><!--//app-card-->
 				
