--- a/src/views/html/moderator/channel.ejs
+++ b/src/views/html/moderator/channel.ejs
@@ -79,7 +79,7 @@
 													<td><%-dados[i].updatedAt%></td>
 													<td><%-dados[i].token_read%></td>
 													<td>
-														<a href="<%= `http://localhost:3000/index/sensors/${dados[i].id}`%>">
+														<a href="<%= `/index/sensors/${dados[i].id}`%>">
 															<button class="btn btn-primary text-white">Gráfico</button>
 														</a>
 													</td>
