--- a/src/views/html/moderator/sensors.ejs
+++ b/src/views/html/moderator/sensors.ejs
@@ -115,7 +115,7 @@
 
 										</tbody>
 									</table>
-									<a href="http://localhost:3000/index/adm/sensor">
+									<a href="/index/adm/sensor">
 										<button class="btn btn-primary mt-3 mb-2 mx-2 text-white">
 											Criar Sensor
 										</button>
