--- a/src/views/html/public/errorAuth.ejs
+++ b/src/views/html/public/errorAuth.ejs
@@ -30,7 +30,7 @@
 		        </div><!--//app-branding-->  
 			    <div class="app-card p-5 text-center shadow-sm">
 				    <h1 class="page-title mb-4"><span class="font-weight-light">Oops! Parece que você não tem permissão para entrar nesta página, por favor volte.</span></h1>
-				    <a class="btn app-btn-primary" href="http://localhost:3000/index/login">Voltar</a>
+				    <a class="btn app-btn-primary" href="/index/login">Voltar</a>
 			    </div>
 		    </div><!--//col-->
 	    </div><!--//row-->
