--- a/src/views/html/public/login.ejs
+++ b/src/views/html/public/login.ejs
@@ -55,7 +55,7 @@
 							</div>
 						</form>
 						
-						<div class="auth-option text-center pt-5">Não tem conta? Crie <a class="text-link" href="http://localhost:3000/index/registro" >aqui</a>.</div>
+						<div class="auth-option text-center pt-5">Não tem conta? Crie <a class="text-link" href="/index/registro" >aqui</a>.</div>
 					</div><!--//auth-form-container-->	
 
 			    </div><!--//auth-body-->
