--- a/src/viewsOfficial/indexADM copy.ejs
+++ b/src/viewsOfficial/indexADM copy.ejs
@@ -125,13 +125,13 @@
 									</table>
 								</div><!--//table-responsive-->
 
-								<a href="http://localhost:3000/index/adm/canal">
+								<a href="/index/adm/canal">
 									<button class="btn btn-primary mt-3 mb-2 mx-2 text-white">
 										Criar Canal
 									</button>
 								</a>
 
-								<a href="http://localhost:3000/index/adm/logTemp">
+								<a href="/index/adm/logTemp">
 									<button class="btn btn-primary mt-3 mb-2 mx-2 text-white">
 										Log Temperatura (Fins de Teste)
 									</button>
