--- a/src/viewsOfficial/registroADM.ejs
+++ b/src/viewsOfficial/registroADM.ejs
@@ -87,7 +87,7 @@
 							</div>
 						</form><!--//auth-form-->
 						
-						<div class="auth-option text-center pt-5">Já tem uma conta? <a class="text-link" href="http://localhost:3000/index/login" >Login</a></div>
+						<div class="auth-option text-center pt-5">Já tem uma conta? <a class="text-link" href="/index/login" >Login</a></div>
 					</div><!--//auth-form-container-->	
 					
 					
