--- a/src/views/html/moderator/edit_sensor.ejs
+++ b/src/views/html/moderator/edit_sensor.ejs
@@ -35,7 +35,7 @@
 						<input name="corretion_temperature" type="checkbox" class="form-check-input" id="flexCheckChecked" checked onclick="toggleCorrectionField()"> 
 						<label  class="form-check-label" >Correção de Temperatura</label>
 						<%} else {%>
-						<input name="corretion_temperature"  type="checkbox" class="form-check-input" id="flexCheckChecked" checked onclick="toggleCorrectionField()"> 
+						<input name="corretion_temperature"  type="checkbox" class="form-check-input" id="flexCheckChecked"  onclick="toggleCorrectionField()"> 
 						<label  class="form-check-label" >Correção de Temperatura</label>
 							<%}%>
 					  </div>
