--- a/src/views/html/admin/mod_channels 2.ejs
+++ b/src/views/html/admin/mod_channels 2.ejs
@@ -68,6 +68,7 @@
 												<th class="cell">Data de Criação</th>
 												<th class="cell">Data de Atualização</th>
 												<th class="cell">Chave de Leitura</th>
+												<th class="cell">Chave de Escrita</th>
 											</tr>
 										</thead>
 										<tbody>
@@ -79,7 +80,7 @@
 													<td><%-dados[i].createdAt%></td>
 													<td><%-dados[i].updatedAt%></td>
 													<td><%-dados[i].token_read%></td>
-													
+													<td><%-dados[i].token_write%></td>
 													<td>
 														<div class="dropdown">
 															<div class="dropdown-toggle no-toggle-arrow" data-bs-toggle="dropdown" aria-expanded="false">
