--- a/src/views/html/admin/mod_channels.ejs
+++ b/src/views/html/admin/mod_channels.ejs
@@ -36,14 +36,7 @@
 							<div class="row g-2 justify-content-start justify-content-md-end align-items-center">
 								<div class="col-auto">
 
-									<form class="table-search-form row gx-1 align-items-center">
-					                    <div class="col-auto">
-					                        <input type="text" onkeyup="findChannels()" id="search-orders" name="searchorders" class="form-control search-orders" placeholder="Nome, ID, Chave">
-					                    </div>
-					                    <div class="col-auto">
-					                        <button onclick="findChannels()"  class="btn app-btn-secondary">Procurar</button>
-					                    </div>
-					                </form> 
+									
 
 								</div><!--//col-->
 							</div><!--//row-->
@@ -60,7 +53,7 @@
 						<div class="app-card app-card-orders-table shadow-sm mb-5">
 							<div class="app-card-body">
 								<div class="table-responsive">
-									<table class="table app-table-hover mb-0 text-left">
+									<table class="table app-table-hover mb-0 text-left tabela1 table-striped">
 										<thead>
 											<tr>
 												<th class="cell">ID Do Canal</th>
@@ -68,7 +61,8 @@
 												<th class="cell">Data de Criação</th>
 												<th class="cell">Data de Atualização</th>
 												<th class="cell">Chave de Leitura</th>
-												<th class="cell">Chave de Escrita</th>
+												<th class="cell">Opções</th>
+
 											</tr>
 										</thead>
 										<tbody>
@@ -80,7 +74,7 @@
 													<td><%-dados[i].createdAt%></td>
 													<td><%-dados[i].updatedAt%></td>
 													<td><%-dados[i].token_read%></td>
-													<td><%-dados[i].token_write%></td>
+													
 													<td>
 														<div class="dropdown">
 															<div class="dropdown-toggle no-toggle-arrow" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,7 +90,7 @@
 																							<li><a class="dropdown-item" href="<%= `/index/channel/edit/${dados[i].id}?modId=${modId}`%>"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil me-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 													  <path fill-rule="evenodd" d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
 													</svg>Editar</a></li>
-																							<li><a class="dropdown-item" onclick="fetchTemperatureLogs(<%- `${dados[i].id}  ,'${ dados[i].token_read}'` %>)"href="#"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download me-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+																							<li><a class="dropdown-item" onclick="fetchTemperatureLogs(<%- `${dados[i].id}  ,'${ dados[i].token_read}'` %>)" href="#"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download me-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 													  <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
 													  <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
 													</svg>Download</a></li>
@@ -202,33 +196,34 @@
 			document.body.removeChild(link);
 		}
 
-		function findChannels(){
-			event.preventDefault();
-			var input, filter, table, tr, td, i, txtValue;
-			input = document.getElementById("search-orders");
-			filter = input.value;
-			table = document.getElementById("orders-table-tab-content");
-			tr = table.getElementsByTagName("tr");
+	</script>
 
-			for (i = 0; i < tr.length; i++) {
-				td = tr[i].getElementsByTagName("td")[0];
-				td2 = tr[i].getElementsByTagName("td")[1];
-				td3 = tr[i].getElementsByTagName("td")[4];
+		
+	<script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script src="//cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
 
-				if (td && td2) {
-				txtValue = td.textContent || td.innerText;
-				txtValue2 = td2.textContent || td2.innerText;
-				txtValue3 = td3.textContent || td3.innerText;
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css">
 
 
-				if (txtValue.indexOf(filter) > -1 || txtValue2.indexOf(filter) > -1 || txtValue3.indexOf(filter) > -1) {
-					tr[i].style.display = "";
-				} else {
-					tr[i].style.display = "none";
+	<script>
+
+		$(document).ready(function() {
+			$('.tabela1').DataTable({
+				"language": {
+					"lengthMenu": "Mostrando _MENU_ registros por página",
+					"zeroRecords": "Nada encontrado",
+					"info": "Mostrando página _PAGE_ de _PAGES_",
+					"infoEmpty": "Nenhum usuário disponível",
+					"infoFiltered": "(filtrado de _MAX_ registros no total)",
+					"search": "Pesquisar:",
+					"paginate": {
+						"next": " Próximo",
+						"previous": "Anterior "
+					}
 				}
-				}
-			}
-		}
+			});
+		});
+
 	</script>
 	
 	<script src="/assets/plugins/popper.min.js"></script>
