--- a/src/views/html/moderator/createChannel.ejs
+++ b/src/views/html/moderator/createChannel.ejs
@@ -41,6 +41,9 @@
 						</div>
 						<button type="button" class="btn btn-primary text-white"
 							onclick="createChannel()">Criar Canal</button>
+						<a href="<%= `/index/${userId}`%>"> 
+							 <button type="button" class="btn btn-primary text-white">Voltar</button>
+						</a>
 					</form>
 				</div>
 			</div>
