--- a/src/views/html/moderator/createSensor.ejs
+++ b/src/views/html/moderator/createSensor.ejs
@@ -38,6 +38,11 @@
 							<input type="text" class="form-control" id="sensorLocation">
 						</div>
 						<button type="button" class="btn btn-primary text-white" onclick="createSensor()">Criar Sensor</button>
+						
+						<a href="<%= `/index/channel/${channelId}/edit_view`%>"> 
+							<button type="button" class="btn btn-primary text-white">Voltar</button>
+					   </a>
+
 					</form>
 				</div>
 			</div>
