--- a/src/views/html/moderator/edit_sensor.ejs
+++ b/src/views/html/moderator/edit_sensor.ejs
@@ -68,7 +68,10 @@
 						<%}%>
 					  </div>
 					  <button type="submit" class="btn btn-success mt-4 mx-auto text-white">Atualizar</button>
-
+					  
+						<a href="<%= `/index/channel/${channelId}/edit_view`%>"> 
+							<button type="button" class="btn btn-success mt-4 mx-auto text-white">Voltar</button>
+					   </a>
 					</div>
 				  </form>
 					
