--- a/src/views/html/public/login.ejs
+++ b/src/views/html/public/login.ejs
@@ -24,7 +24,17 @@
 		    <div class="d-flex flex-column align-content-end">
 			    <div class="app-auth-body mx-auto">	
 				    <div class="app-auth-branding mb-4"></div>
-					<h2 class="auth-heading text-center mb-5">Página de Login</h2>
+					<h2 class="auth-heading text-center mb-5">Login</h2>
+
+					<% if(typeof message != "undefined" && message){  %>
+						<div class="alert alert-danger d-flex align-items-center" role="alert">
+							<svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+							<div>
+							  <%- message %>
+							</div>
+						  </div>
+					<%} %>
+
 			        <div class="auth-form-container text-start">
 						<form class="auth-form login-form" method="POST" action="/auth/login">         
 							<div class="email mb-3">
